create trainee API and auth api
i added login and register services and isAuthenticated middleware and trainee API

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../css/login.css">
     <title>Login Page</title>
 </head>
 <body>
@@ -20,12 +20,11 @@
                 <div class="div-4">
                     <div class="div-5">Login</div>
                     <div class="div-6">
-                        <div class="div-7">Username</div>
-                        <input type="text" class="input" placeholder="Enter your username">
+                        <div class="div-7">Email</div>
+                        <input type="email" class="input" placeholder="Enter your email">
                         <div ></div>
                         <div class="div-9">Password</div>
                         <input type="password" class="input" placeholder="Enter your password">
-                        <div class="div-11">Forgot password?</div>
                         <button type="submit" class="div-12">Login</button>
                         <div class="div-13">
                             <div class="div-14">Don’t have an account !</div>
