--- a/public/html/coach_register.html
+++ b/public/html/coach_register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="../css/register.css">
     <title>Caoch Registration</title>
 </head>
 <body>
@@ -55,6 +55,11 @@
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
                             <input type="text" />
                         </div>
+                        <div class="div-21">
+                            Years of experience:
+                            <span style="color: rgba(255, 0, 0, 1)">*</span>
+                            <input class="div-22" type="number" />
+                        </div>  
                         <div class="div-19">Gender:
                             <input type="radio" name="gender" value="male" /> Male
                             <input type="radio" name="gender" value="female" /> Female
