finished register and login functionalities

--- a/public/html/coach_register.html
+++ b/public/html/coach_register.html
@@ -64,8 +64,10 @@
                             <input type="radio" name="gender" value="male" /> Male
                             <input type="radio" name="gender" value="female" /> Female
                         </div>
-                        <div class="div-21">Age:
-                            <input class="div-22" type="number" />
+                        <div class="div-21">
+                            <label for="dateOfBirth">Date of Birth:</label>
+                            <input type="date" id="dateOfBirth" name="dateOfBirth">
+                            <span id="dateOfBirthError" class="input-error-message"></span>
                         </div>   
 
                         <button class="div-29" type="submit">Register</button>
