--- a/public/html/trainee_register.html
+++ b/public/html/trainee_register.html
@@ -15,63 +15,81 @@
                 srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&"
                 class="img"
             />
-            <form>
-                <div class="div-3">
-                    <div class="div-4">Gym Activity Tracker</div>
+            <div class="div-3">
+                <div class="div-4">Gym Activity Tracker</div>
+                <form id="traineeRegistrationForm">
                     <div class="div-5">
                         <div class="div-6">Register</div>
                         <div class="div-7">
-                            First Name:
+                            <label for="firstName">First Name:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" />
+                            <input type="text" id="firstName" required name="firstName" value="papa"/>
+                            <span id="firstNameError" class="input-error-message" style="color: red; display: none;">
+                                Please enter your first name.
+                            </span>
                         </div>
                         <div class="div-9">
-                            Last Name:
+                            <label for="lastName">Last Name:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" />
+                            <input type="text" id="lastName" required name="lastName" value="papa2"/>
+                            <span id="lastNameError" class="input-error-message" style="color: red; display: none;">
+                                Please enter your last name.
+                            </span>
                         </div>
                         <div class="div-11">
-                            Username:
+                            <label for="username">Username:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" />
+                            <input type="text" id="username" required name="username" value="papa3"/>
+                            <span id="usernameError" class="input-error-message"></span>
                         </div>
                         <div class="div-13">
-                            Password:
+                            <label for="password">Password:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="password" />
+                            <input type="password" id="password" required name="password" value="12345678As!"/>
+                            <span id="passwordError" class="input-error-message"></span>
                         </div>
                         <div class="div-15">
-                            Confirm Password:
+                            <label for="confirmPassword">Confirm Password:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="password" />
+                            <input type="password" id="confirmPassword" required name="confirmPassword" value="12345678As!"/>
+                            <span id="confirmPasswordError" class="input-error-message"></span>
                         </div>
                         <div class="div-17">
-                            Email:
+                            <label for="email">Email:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="email" />
+                            <input type="email" id="email" required name="email" value="tt@gmail.com"/>
+                            <span id="emailError" class="input-error-message"></span>
                         </div>
-                        <div class="div-19">Gender:
-                            <input type="radio" name="gender" value="male" /> Male
-                            <input type="radio" name="gender" value="female" /> Female
+                        <div class="div-19">
+                            <label>Gender:</label>
+                            <input type="radio" id="male" name="gender" value="male" checked/>
+                            <label for="male">Male</label>
+                            <input type="radio" id="female" name="gender" value="female" />
+                            <label for="female">Female</label>
                         </div>
-                        <div class="div-21">Age:
-                            <input class="div-22" type="number" />
-                        </div>   
-                        <div class="div-23">Weight:
-                            <input type="number" />
+                        <div class="div-23">
+                            <label for="weight">Weight:</label>
+                            <input type="number" id="weight" name="weight" min="30" max="300">
+                            <span id="weightError" class="input-error-message"></span>
                         </div>
-                        <div class="div-25">Height:
-                            <input type="number" />
+                        <div class="div-25">
+                            <label for="height">Height:</label>
+                            <input type="number" id="height" name="height" min="130" max="250">
+                            <span id="heightError" class="input-error-message"></span>
                         </div>
-                        <div class="div-27">Date of Birth:
-                            <input type="date" />
+                        <div class="div-27">
+                            <label for="dateOfBirth">Date of Birth:</label>
+                            <input type="date" id="dateOfBirth" name="dateOfBirth">
+                            <span id="dateOfBirthError" class="input-error-message"></span>
                         </div>
                         
                         <button class="div-29" type="submit">Register</button>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
-    </div>     
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
+    <script src="../js/validateTraineeRegister.js"></script>
 </body>
 </html>
