create 3 pages(workouts,startEmptyWorkout,recommendedBodyPart)

--- a/public/html/coach_register.html
+++ b/public/html/coach_register.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="../css/custom_alert.css">
     <title>Caoch Registration</title>
 </head>
 <body>
@@ -71,6 +72,10 @@
                         </div>   
 
                         <button class="div-29" type="submit">Register</button>
+                        <div class="custom-alert">
+                            <span class="close-btn">&times;</span>
+                            <p>Registration failed. Please try again later.</p>
+                        </div>
                     </div>
                 </div>
             </form>
