--- a/public/html/trainee_register.html
+++ b/public/html/trainee_register.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="../css/custom_alert.css">
     <title>Trainee Registration</title>
 </head>
 <body>
@@ -88,6 +89,10 @@
                 </form>
             </div>
         </div>
+    </div>
+    <div class="custom-alert">
+        <span class="close-btn">&times;</span>
+        <p>Registration failed. Please try again later.</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js" integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
     <script src="../js/validateTraineeRegister.js"></script>
