rewrite workouts page and add more things in startEmptyWorkout page

--- a/public/html/trainee_home.html
+++ b/public/html/trainee_home.html
@@ -121,6 +121,8 @@
             <div class="div-37">Contact</div>
           </div>
         </div>
-      </div> 
+      </div>
+
+      <script src="../js/trainee_home.js"></script>
 </body>
 </html>
