--- a/public/html/forgot_password.html
+++ b/public/html/forgot_password.html
@@ -70,5 +70,19 @@
             <button type="submit">Reset Password</button>
         </div>
     </form>
+
+    <script>
+                // Handle form submission for password reset
+                document.addEventListener('DOMContentLoaded', function() {
+                    const forgotPasswordForm = document.getElementById('forgotPasswordForm');
+            
+                    forgotPasswordForm.addEventListener('submit', function(event) {
+                        event.preventDefault();
+                        // Add logic to handle form submission for password reset
+                        // You can use AJAX (e.g., Axios) to send a request to the server for password reset
+                        // Once the request is successful, display a success message or redirect the user to a confirmation page
+                    });
+                });
+    </script>
 </body>
 </html>
