did exercise library page and back-end for startEmptyWorkout page and workouts page

--- a/public/html/workouts.html
+++ b/public/html/workouts.html
@@ -37,46 +37,17 @@
 
         <!-- Container of Saved Workouts -->
         <div id="saved-workouts-container">
-        <!-- Sample Workout Card -->
-        <div class="workout-card">
-            <div class="workout-name">Workout 1</div>
-            <div class="workout-info">
-            <!-- Exercise Details -->
-            <div class="exercise-info">3 x Push-ups</div>
-            <div class="exercise-info">5 x Squats</div>
-            <!-- Start Workout Button -->
-            <button class="start-workout-btn">Start Workout</button>
-            <!-- Delete Button -->
-            <button class="delete-workout-btn">Delete</button>
-            </div>
-        </div>
-        <!-- Repeat for each saved workout -->
+          <p id="no-workouts-message">No saved workouts yet.</p>
             <!-- Sample Workout Card -->
-            <div class="workout-card">
-                <div class="workout-name">Workout 2</div>
+          <!-- <div class="workout-card">
+                <div class="workout-name">Workout 1</div>
                 <div class="workout-info">
-                <!-- Exercise Details -->
-                <div class="exercise-info">3 x Push-ups</div>
-                <div class="exercise-info">5 x Squats</div>
-                <!-- Start Workout Button -->
-                <button class="start-workout-btn">Start Workout</button>
-                <!-- Delete Button -->
-                <button class="delete-workout-btn">Delete</button>
+                    <div class="exercise-info">Push-ups: 3 sets</div>
+                    <div class="exercise-info">Squats: 5 sets</div>
+                    <button class="start-workout-btn">Start Workout</button>
+                    <button class="delete-workout-btn">Delete</button>
                 </div>
-            </div>
-                <!-- Sample Workout Card -->
-        <div class="workout-card">
-            <div class="workout-name">Workout 3</div>
-            <div class="workout-info">
-            <!-- Exercise Details -->
-            <div class="exercise-info">3 x Push-ups</div>
-            <div class="exercise-info">5 x Squats</div>
-            <!-- Start Workout Button -->
-            <button class="start-workout-btn">Start Workout</button>
-            <!-- Delete Button -->
-            <button class="delete-workout-btn">Delete</button>
-            </div>
-        </div>
+          </div> -->
         </div>
 
 
@@ -100,6 +71,7 @@
     </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/workouts.js"></script>
 </body>
 </html>
