continue to add functions

--- a/public/html/coachHome.html
+++ b/public/html/coachHome.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/trainee_home.css">
-    <title>Trainee Home</title>
+    <link rel="stylesheet" href="../css/coachHome.css">
+    <title>Coach Home</title>
 </head>
 <body>
     <div class="div">
@@ -24,7 +24,7 @@
             <div class="column-2">
               <div class="div-6">
                 <div class="div-7"><a href="trainee_home.html">Home</a></div>
-                <div class="div-7"><a href="profileTrainee.html">Profile</a></div>
+                <div class="div-7"><a href="#">Profile</a></div>
                 <div class="div-8"><a href="workouts.html">Workouts</a></div>
                 <div class="div-9"><a href="exerciseLibrary.html">Exercises</a></div>
                 <div class="div-10"><a href="http://localhost:3002">Chat</a></div>
@@ -32,24 +32,19 @@
                 <div class="div-11">
                     <a href="#" id="othersLink">Others</a>
                     <div id="othersOptions" style="display: none;">
-                        <div><a href="recommendedBodyPart.html">Recommended Exercises</a></div>
-                        <div><a href="TrackProgress.html">Track Your Progress</a></div>
+                        <div><a href="TrackProgress.html">Track trainee Progress</a></div>
                     </div>
                 </div>
-            </div>            
+              </div>
             </div>
           </div>
         </div>
         <div class="div-12">Welcome to Gym Activity Tracker</div>
         <div class="div-13">
           <br />
-          Elevate your fitness journey with our Gym Activity Tracker! Say goodbye to
-          traditional pen-and-paper methods and embrace a modern, efficient, and
-          user-friendly platform designed to simplify your gym activities. Whether
-          you're a professional athlete or just starting your fitness adventure, our
-          platform satisfies all, offering a seamless experience to log workouts, get
-          recommended exercises using machine learning algorithms, communicate with
-          coach and monitor progress using data analysis tools.
+          Welcome to our coaching platform, where we revolutionize the way you guide and inspire your trainees towards their fitness goals. 
+          With our Gym Activity Tracker, coaching becomes an intuitive and dynamic experience. 
+          Bid farewell to cumbersome spreadsheets and embrace a sophisticated, yet user-friendly interface designed to streamline your coaching process.
         </div>
         <div class="div-14">
           <img
@@ -57,22 +52,10 @@
             srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/3678cd274301b935a0c80e5169fade0d86e57335af8fc69f0bae5035f0043111?apiKey=9502236416344e4c804c4dccd781f6a4&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/3678cd274301b935a0c80e5169fade0d86e57335af8fc69f0bae5035f0043111?apiKey=9502236416344e4c804c4dccd781f6a4&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/3678cd274301b935a0c80e5169fade0d86e57335af8fc69f0bae5035f0043111?apiKey=9502236416344e4c804c4dccd781f6a4&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/3678cd274301b935a0c80e5169fade0d86e57335af8fc69f0bae5035f0043111?apiKey=9502236416344e4c804c4dccd781f6a4&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/3678cd274301b935a0c80e5169fade0d86e57335af8fc69f0bae5035f0043111?apiKey=9502236416344e4c804c4dccd781f6a4&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/3678cd274301b935a0c80e5169fade0d86e57335af8fc69f0bae5035f0043111?apiKey=9502236416344e4c804c4dccd781f6a4&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/3678cd274301b935a0c80e5169fade0d86e57335af8fc69f0bae5035f0043111?apiKey=9502236416344e4c804c4dccd781f6a4&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/3678cd274301b935a0c80e5169fade0d86e57335af8fc69f0bae5035f0043111?apiKey=9502236416344e4c804c4dccd781f6a4&"
             class="img-2"
           />
-          <div class="div-15">Make Workout Plan<br>(Log Workouts)</div>
+          <div class="div-15">Set up workout plans <br>for trainees.<br>(Log Workouts)</div>
           <div class="div-16">
-            Log your workouts effortlessly, detailing exercises, sets, repetitions,
+            Log trainee workouts effortlessly, detailing exercises, sets, repetitions,
             and rest times in just a few clicks.
-          </div>
-        </div>
-        <div class="div-17">
-          <img
-            loading="lazy"
-            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/93b8f06c5f010c194e4043b5f46b7d3766e10621a8c72f78a80dee6232fe5b61?apiKey=9502236416344e4c804c4dccd781f6a4&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/93b8f06c5f010c194e4043b5f46b7d3766e10621a8c72f78a80dee6232fe5b61?apiKey=9502236416344e4c804c4dccd781f6a4&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/93b8f06c5f010c194e4043b5f46b7d3766e10621a8c72f78a80dee6232fe5b61?apiKey=9502236416344e4c804c4dccd781f6a4&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/93b8f06c5f010c194e4043b5f46b7d3766e10621a8c72f78a80dee6232fe5b61?apiKey=9502236416344e4c804c4dccd781f6a4&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/93b8f06c5f010c194e4043b5f46b7d3766e10621a8c72f78a80dee6232fe5b61?apiKey=9502236416344e4c804c4dccd781f6a4&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/93b8f06c5f010c194e4043b5f46b7d3766e10621a8c72f78a80dee6232fe5b61?apiKey=9502236416344e4c804c4dccd781f6a4&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/93b8f06c5f010c194e4043b5f46b7d3766e10621a8c72f78a80dee6232fe5b61?apiKey=9502236416344e4c804c4dccd781f6a4&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/93b8f06c5f010c194e4043b5f46b7d3766e10621a8c72f78a80dee6232fe5b61?apiKey=9502236416344e4c804c4dccd781f6a4&"
-            class="img-3"
-          />
-          <div class="div-18">Recommended exercises</div>
-          <div class="div-19">
-            Receive personalized exercise recommendations based on the weakest part of
-            your body using machine learning algorithms.
           </div>
         </div>
         <div class="div-20">
@@ -81,35 +64,33 @@
             srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/6b02f2a73108c65456966c1dc7e2375e8719deefc82e1a59e37f8002d61fa82c?apiKey=9502236416344e4c804c4dccd781f6a4&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/6b02f2a73108c65456966c1dc7e2375e8719deefc82e1a59e37f8002d61fa82c?apiKey=9502236416344e4c804c4dccd781f6a4&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/6b02f2a73108c65456966c1dc7e2375e8719deefc82e1a59e37f8002d61fa82c?apiKey=9502236416344e4c804c4dccd781f6a4&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/6b02f2a73108c65456966c1dc7e2375e8719deefc82e1a59e37f8002d61fa82c?apiKey=9502236416344e4c804c4dccd781f6a4&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/6b02f2a73108c65456966c1dc7e2375e8719deefc82e1a59e37f8002d61fa82c?apiKey=9502236416344e4c804c4dccd781f6a4&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/6b02f2a73108c65456966c1dc7e2375e8719deefc82e1a59e37f8002d61fa82c?apiKey=9502236416344e4c804c4dccd781f6a4&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/6b02f2a73108c65456966c1dc7e2375e8719deefc82e1a59e37f8002d61fa82c?apiKey=9502236416344e4c804c4dccd781f6a4&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/6b02f2a73108c65456966c1dc7e2375e8719deefc82e1a59e37f8002d61fa82c?apiKey=9502236416344e4c804c4dccd781f6a4&"
             class="img-4"
           />
-          <div class="div-21">Communicate with Coach</div>
+          <div class="div-21">Communicate with Trainee</div>
           <div class="div-22">
-            Connect with coach in real-time through our built-in chat system. Seek
-            guidance, share progress, and receive valuable feedback.
+            Connect with trainee in real-time through our built-in chat system.
           </div>
         </div>
         <div class="div-26">
-          <img
-            loading="lazy"
-            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&"
-            class="img-6"
-          />
-          <div class="div-27">Exercise Library</div>
-          <div class="div-28">
-            Access a vast library of exercises complete with detailed descriptions and
-            visual references through photos.
+            <img
+              loading="lazy"
+              srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/d74c13b0105c39a37220c6990be26d32421bf130f2b1ab991d36e2b89da7f669?apiKey=9502236416344e4c804c4dccd781f6a4&"
+              class="img-6"
+            />
+            <div class="div-27">Exercise Library</div>
+            <div class="div-28">
+              Access a vast library of exercises complete with detailed descriptions and
+              visual references through photos.
+            </div>
           </div>
-        </div>
         <div class="div-23">
           <img
             loading="lazy"
             srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/d66a9304b89f15b0e2cbb1338a78710425066514b5ba06f35c53fc4063c5e409?apiKey=9502236416344e4c804c4dccd781f6a4&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/d66a9304b89f15b0e2cbb1338a78710425066514b5ba06f35c53fc4063c5e409?apiKey=9502236416344e4c804c4dccd781f6a4&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/d66a9304b89f15b0e2cbb1338a78710425066514b5ba06f35c53fc4063c5e409?apiKey=9502236416344e4c804c4dccd781f6a4&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/d66a9304b89f15b0e2cbb1338a78710425066514b5ba06f35c53fc4063c5e409?apiKey=9502236416344e4c804c4dccd781f6a4&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/d66a9304b89f15b0e2cbb1338a78710425066514b5ba06f35c53fc4063c5e409?apiKey=9502236416344e4c804c4dccd781f6a4&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/d66a9304b89f15b0e2cbb1338a78710425066514b5ba06f35c53fc4063c5e409?apiKey=9502236416344e4c804c4dccd781f6a4&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/d66a9304b89f15b0e2cbb1338a78710425066514b5ba06f35c53fc4063c5e409?apiKey=9502236416344e4c804c4dccd781f6a4&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/d66a9304b89f15b0e2cbb1338a78710425066514b5ba06f35c53fc4063c5e409?apiKey=9502236416344e4c804c4dccd781f6a4&"
             class="img-5"
           />
-          <div class="div-24">Track your progress</div>
+          <div class="div-24">Track trainee progress</div>
           <div class="div-25">
-            Visualize your progress with powerful data analysis tools within the
-            application. Track your achievements and stay motivated on your fitness
-            journey.
+            Visualize trainee progress with powerful data analysis tools within the
+            application. 
           </div>
         </div>
         <div class="div-29">
@@ -131,6 +112,6 @@
         </div>
       </div>
 
-      <script src="../js/trainee_home.js"></script>
+      <script src="../js/coachHome.js"></script>
 </body>
 </html>
