--- a/public/html/startEmptyWorkout.html
+++ b/public/html/startEmptyWorkout.html
@@ -18,13 +18,21 @@
                 </div>
                 </div>
                 <div class="nav-container">
-                <div class="nav-menu">
-                    <button class="nav-item">Home</button>
-                    <button class="nav-item">Workouts</button>
-                    <button class="nav-item">Exercises</button>
-                    <button class="nav-item">Chat</button>
-                    <button class="nav-item">Others</button>
-                </div>
+                    <div class="nav-menu">
+                        <div class="nav-item"><a href="trainee_home.html">Home</a></div>
+                        <div class="nav-item"><a href="profileTrainee.html">Profile</a></div>
+                        <div class="nav-item"><a href="workouts.html">Workouts</a></div>
+                        <div class="nav-item"><a href="exerciseLibrary.html">Exercises</a></div>
+                        <div class="nav-item"><a href="http://localhost:3002">Chat</a></div>
+                        <div class="nav-item"><a href="user_type.html">Logout</a></div>
+                        <div class="nav-item">
+                            <a href="#" id="othersLink">Others</a>
+                            <div id="othersOptions" style="display: none;">
+                              <div><a href="recommendedBodyPart.html">Recommended Exercises</a></div>
+                              <div><a href="TrackProgress.html">Track Your Progress</a></div>
+                          </div>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
