--- a/public/html/coachHome.html
+++ b/public/html/coachHome.html
@@ -23,8 +23,8 @@
             </div>
             <div class="column-2">
               <div class="div-6">
-                <div class="div-7"><a href="trainee_home.html">Home</a></div>
-                <div class="div-7"><a href="#">Profile</a></div>
+                <div class="div-7"><a href="coachHome.html">Home</a></div>
+                <div class="div-7"><a href="profileCoach.html">Profile</a></div>
                 <div class="div-8"><a href="workouts.html">Workouts</a></div>
                 <div class="div-9"><a href="exerciseLibrary.html">Exercises</a></div>
                 <div class="div-10"><a href="http://localhost:3002">Chat</a></div>
