--- a/public/html/coach_register.html
+++ b/public/html/coach_register.html
@@ -16,70 +16,90 @@
                 srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/5130d128c9823537c24be5b41476c306121fdaeffce99a6a9f5c79dd04bc2d2c?apiKey=9502236416344e4c804c4dccd781f6a4&"
                 class="img"
             />
-            <form>
                 <div class="div-3">
                     <div class="div-4">Gym Activity Tracker</div>
-                    <div class="div-5">
-                        <div class="div-6">Register</div>
-                        <div class="div-7">
-                            First Name:
-                            <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" />
+                    <form id="coachRegistrationForm">
+                        <div class="div-5">
+                            <div class="div-6">Register as coach</div>
+                            <div class="div-7">
+                                <label for="firstName">First Name:</label>
+                                <span style="color: rgba(255, 0, 0, 1)">*</span>
+                                <input type="text" id="firstName" required name="firstName" />
+                                <span id="firstNameError" class="input-error-message" style="color: red; display: none;">
+                                    Please enter your first name.
+                                </span>
+                            </div>
+                            <div class="div-9">
+                                <label for="lastName">Last Name:</label>
+                                <span style="color: rgba(255, 0, 0, 1)">*</span>
+                                <input type="text" id="lastName" required name="lastName" />
+                                <span id="lastNameError" class="input-error-message" style="color: red; display: none;">
+                                    Please enter your last name.
+                                </span>
+                            </div>
+                            <div class="div-11">
+                                <label for="username">Username:</label>
+                                <span style="color: rgba(255, 0, 0, 1)">*</span>
+                                <input type="text" id="username" required name="username" />
+                                <span id="usernameError" class="input-error-message"></span>
+                            </div>
+                            <div class="div-13">
+                                <label for="password">Password:</label>
+                                <span style="color: rgba(255, 0, 0, 1)">*</span>
+                                <input type="password" id="password" required name="password" />
+                                <span id="passwordError" class="input-error-message"></span>
+                            </div>
+                            <div class="div-15">
+                                <label for="confirmPassword">Confirm Password:</label>
+                                <span style="color: rgba(255, 0, 0, 1)">*</span>
+                                <input type="password" id="confirmPassword" required name="confirmPassword" />
+                                <span id="confirmPasswordError" class="input-error-message"></span>
+                            </div>
+                            <div class="div-17">
+                                <label for="email">Email:</label>
+                                <span style="color: rgba(255, 0, 0, 1)">*</span>
+                                <input type="email" id="email" required name="email" />
+                                <span id="emailError" class="input-error-message"></span>
+                            </div>
+                            <div class="div-9">
+                                certificate:
+                                <span style="color: rgba(255, 0, 0, 1)">*</span>
+                                <input type="text" id="certificate" required name="certificate"/>
+                                <span id="certificateError" class="input-error-message"></span>
+                            </div>
+                            <div class="div-21">
+                                Years of experience:
+                                <span style="color: rgba(255, 0, 0, 1)">*</span>
+                                <input class="div-22" type="number" id="yearsOfExperience" required name="yearsOfExperience"/>
+                                <span id="yearsOfExperienceError" class="input-error-message"></span>
+                            </div>  
+                            <div class="div-19">
+                                <label>Gender:</label>
+                                <input type="radio" id="male" name="gender" value="male" checked/>
+                                <label for="male">Male</label>
+                                <input type="radio" id="female" name="gender" value="female" />
+                                <label for="female">Female</label>
+                            </div>
+                            <div class="div-21">
+                                <label for="dateOfBirth">Date of Birth:</label>
+                                <input type="date" id="dateOfBirth" name="dateOfBirth">
+                                <span id="dateOfBirthError" class="input-error-message"></span>
+                            </div>   
+    
+                            <button class="div-29" type="submit">Register</button>
+                            <div class="custom-alert">
+                                <span class="close-btn">&times;</span>
+                                <p>Registration failed. Please try again later.</p>
+                            </div>
                         </div>
-                        <div class="div-9">
-                            Last Name:
-                            <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" />
-                        </div>
-                        <div class="div-11">
-                            Username:
-                            <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" />
-                        </div>
-                        <div class="div-13">
-                            Password:
-                            <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="password" />
-                        </div>
-                        <div class="div-15">
-                            Confirm Password:
-                            <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="password" />
-                        </div>
-                        <div class="div-17">
-                            Email:
-                            <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="email" />
-                        </div>
-                        <div class="div-9">
-                            certificate:
-                            <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input type="text" />
-                        </div>
-                        <div class="div-21">
-                            Years of experience:
-                            <span style="color: rgba(255, 0, 0, 1)">*</span>
-                            <input class="div-22" type="number" />
-                        </div>  
-                        <div class="div-19">Gender:
-                            <input type="radio" name="gender" value="male" /> Male
-                            <input type="radio" name="gender" value="female" /> Female
-                        </div>
-                        <div class="div-21">
-                            <label for="dateOfBirth">Date of Birth:</label>
-                            <input type="date" id="dateOfBirth" name="dateOfBirth">
-                            <span id="dateOfBirthError" class="input-error-message"></span>
-                        </div>   
 
-                        <button class="div-29" type="submit">Register</button>
-                        <div class="custom-alert">
-                            <span class="close-btn">&times;</span>
-                            <p>Registration failed. Please try again later.</p>
-                        </div>
-                    </div>
+                    </form>
                 </div>
-            </form>
         </div>
     </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/coachRegister.js"></script>
 </body>
 </html>
