--- a/public/html/trainee_register.html
+++ b/public/html/trainee_register.html
@@ -20,7 +20,7 @@
                 <div class="div-4">Gym Activity Tracker</div>
                 <form id="traineeRegistrationForm">
                     <div class="div-5">
-                        <div class="div-6">Register</div>
+                        <div class="div-6">Register as Trainee</div>
                         <div class="div-7">
                             <label for="firstName">First Name:</label>
                             <span style="color: rgba(255, 0, 0, 1)">*</span>
